Update Unirest and use GSON for mapping